--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "airtable": "^0.8.1",
     "botbuilder-adapter-webex": "^1.0.4",
     "botbuilder-storage-mongodb": "^0.9.5",
     "botbuilder-storage-redis": "^1.0.9",
     "botkit": "^4.6.0",
     "botkit-plugin-cms": "^1.0.3",
+    "ciscospark": "^1.59.0",
     "dotenv": "^7.0.0",
     "redis": "^2.8.0",
     "uuid": "^3.3.3"
